--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@
     --notification-info-light: rgba(120, 134, 199, 0.5);
     --notification-milk: rgb(248, 250, 252);
     --notification-gray: rgb(154, 166, 178);
+    --notification-neutral: rgb(173, 178, 212);
+    --notification-neutral-light: rgba(173, 178, 212, 0.5);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -105,6 +107,11 @@ h1, h2, h3, h4, h5, h6 {
     border: 2px solid var(--notification-info);
 }
 
+.fai__notification__container.variant-neutral {
+    background-color: var(--notification-milk);
+    border: 2px solid var(--notification-neutral);
+}
+
 .fai__notification__icon {
     font-size: 30px;
     width: auto;
@@ -164,6 +171,10 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--notification-warning);
 }
 
+.fa-question {
+    color: var(--notification-neutral);
+}
+
 button {
     cursor: pointer;
     padding: 10px 20px;
@@ -184,6 +195,10 @@ button {
 
 #btn_warning {
     background-color: yellow;
+}
+
+#btn_neutral {
+    background-color: var(--notification-neutral);
 }
 
 @media screen and (max-width: 374px) {
