--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
 :root {
     --notification-success: rgb(221, 235, 157);
-    --notification-success-light: rgba(221, 235, 157, 0.5);
+    --notification-success-light: rgba(221, 235, 157, 0.2);
     --notification-green: #5DB996;
     --notification-error: rgb(216, 64, 64);
-    --notification-error-light: rgb(216, 64, 64, 0.5);
+    --notification-error-light: rgb(216, 64, 64, 0.2);
     --notification-warning: rgb(255, 180, 51);
-    --notification-warning-light: rgba(255, 180, 51, 0.5);
+    --notification-warning-light: rgba(255, 180, 51, 0.2);
     --notification-info: rgb(120, 134, 199);
-    --notification-info-light: rgba(120, 134, 199, 0.5);
+    --notification-info-light: rgba(120, 134, 199, 0.2);
     --notification-milk: rgb(248, 250, 252);
-    --notification-gray: rgb(154, 166, 178);
+    --notification-gray: rgb(76, 88, 91);
     --notification-neutral: rgb(173, 178, 212);
-    --notification-neutral-light: rgba(173, 178, 212, 0.5);
+    --notification-neutral-light: rgba(173, 178, 212, 0.2);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -141,7 +141,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .fai__notification__close:hover {
-    background-color: var(--notification-milk);
+    background-color: #ffffff;
     font-weight: 700;
 }
 
@@ -151,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .fai__notification__message {
-    color: #1b1b1b;
+    color: var(--notification-gray);
     font-weight: 100;
 }
 
